# llm_diplomacy

./: .env.example  .gitignore  .vercelignore  LICENSE  README.md  README_WEB.md  compare_models.sh  docker-compose.yaml  lm_game.py  main.py  pyproject.toml  requirements.txt  run.cmd  run.sh  storage.py  test_conversation.sh  test_one_model.sh  vercel.json
ai_animation/src/: phase.ts
ai_diplomacy/: clients.py  game_history.py  negotiations.py  utils.py
ai_diplomacy/prompts/: conversation_instructions.txt  system_prompt.txt
api/: index.py
diplomacy/: __init__.py  run_tests.sh
diplomacy/engine/: game.py
diplomacy/web/: package-lock.json  package.json
diplomacy/web/src/gui/pages/: content_game.jsx
diplomacy/web/src/gui/wizards/gameCreation/: gameCreationWizard.js  panelChooseMap.js  panelChooseSettings.js
static/: diplomacy.css
templates/: base.html  game.html  index.html  new_game.html
