[project]
name = "llm-diplomacy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "bcrypt>=4.3.0",
    "coloredlogs>=15.0.1",
    "google-genai>=1.11.0",
    "google-generativeai>=0.8.5",
    "openai>=1.76.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "ujson>=5.10.0",
]

[tool.ruff]
exclude = ["diplomacy"]
