[project]
name = "llm-diplomacy"
version = "0.1.0"
description = "Diplomacy Web Game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "coloredlogs>=15.0.1",
    "openai>=1.76.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "ujson>=5.10.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "vercel>=0.2",
    "vercel-kv-sdk>=0.1.2",
]

[project.scripts]
diplomacy-web = "main:app"
